--- a/frontend/src/app/shared/grid/grid.html
+++ b/frontend/src/app/shared/grid/grid.html
@@ -1,1 +1,6 @@
-<p>grid works!</p>
+<!-- <div class="pokemon-grid">
+  <div class="pokemon-grid-container">
+
+  </div>
+</div> -->
+<div>debug grid len: {{ pokemon?.length }}</div>
