polished on home page, implemented responsive grid, and imported multiple cards onto grid for testing responsiveness

--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,2 +1,3 @@
-<p>home works!</p>
-<app-grid [pokemon]="pokemon$ | async" />
+<div class="home-container">
+  <app-grid [pokemon]="pokemon$ | async" />
+</div>
