--- a/frontend/src/app/shared/grid/grid.html
+++ b/frontend/src/app/shared/grid/grid.html
@@ -1,6 +1,24 @@
-<!-- <div class="pokemon-grid">
+<div class="pokemon-grid">
   <div class="pokemon-grid-container">
-
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
+    <app-pokecard />
   </div>
-</div> -->
-<div>debug grid len: {{ pokemon?.length }}</div>
+</div>
