added some new components, hooked up the grid to render the right amount of pokecards based on results from api, and other cool stuff

--- a/frontend/src/app/shared/navbar/navbar.html
+++ b/frontend/src/app/shared/navbar/navbar.html
@@ -11,13 +11,14 @@
     @if (searchBy === 'name') {
       <div class="search-input-container">
         <input type="text" class="search-input" placeholder="Enter Pokemon name..." maxlength="20">
+        <app-button></app-button>
       </div>
     }
 
     @if (searchBy === 'type') {
       <div class="search-input-container">
         <select class="search-type-dropdown">
-          <option value="">Select Type</option>
+          <option value="">Select Pokemon Type</option>
           @if (pokemonTypes$ | async; as pokemonTypes) {
             @if (pokemonTypes.length > 0) {
               @for (type of pokemonTypes; track type) {
@@ -30,6 +31,7 @@
             <option disabled>Loading types...</option>
           }
         </select>
+        <app-button></app-button>
       </div>
     }
 
