--- a/frontend/src/app/shared/navbar/navbar.scss
+++ b/frontend/src/app/shared/navbar/navbar.scss
@@ -2,7 +2,7 @@
 
 .pokemon-navbar {
   width: 100%;
-  background-color: #F00000;
+  background-color: #1e46ab;
   padding: 12px 0px;
   margin: 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
