--- a/frontend/src/app/shared/grid/grid.html
+++ b/frontend/src/app/shared/grid/grid.html
@@ -1,24 +1,7 @@
 <div class="pokemon-grid">
   <div class="pokemon-grid-container">
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
-    <app-pokecard />
+    @for (p of pokemon; track p.id) {
+      <app-pokecard />
+    }
   </div>
 </div>
