--- a/frontend/src/app/components/pokecard/pokecard.scss
+++ b/frontend/src/app/components/pokecard/pokecard.scss
@@ -9,7 +9,7 @@
   position: relative;
   overflow: hidden;
   transition: all 0.3s ease;
-  font-family: 'Bangers', cursive, sans-serif;
+  font-family: 'Bangers', cursive;
 
   // &::before {
   //   content: '';
