--- a/frontend/src/app/shared/button/button.html
+++ b/frontend/src/app/shared/button/button.html
@@ -1,3 +1,3 @@
-<button class="pokeball-btn">
+<button class="pokeball-btn" (click)="onClick()">
   <img src="../../../assets/imgs/pokeball.png" alt="pokeball" class="pokeball-img" />
 </button>
