--- a/frontend/src/app/shared/button/button.scss
+++ b/frontend/src/app/shared/button/button.scss
@@ -16,12 +16,27 @@
 .reset-btn {
   background: transparent;
   border: none;
-  width: 32px;
-  height: 32px;
-  margin: -10px;
+  width: 40px;
+  height: 40px;
+  padding: 8px 0px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-left: -10px;
+  margin-top: 5px;
 
   &:hover {
     cursor: pointer;
   }
+}
+
+.reset-btn-icon {
+  width: 40px;
+  height: 40px;
+  fill: #EE151D;
+  stroke: none;
+  display: block;
 }
 
