implemented logic to handle invalid pokemon name search to show a image and text

--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -9,6 +9,10 @@
       <img src="../../../assets/imgs/pokeball.png" alt="loading" class="pokeball-spinner" />
     </div>
     }
+    @else {
+    <img src="../../../assets/imgs/team_rocket.png" alt="team-rocket" class="no-results-found-img" />
+    <h3 class="no-results-found-text">Oops! No Pokemon found</h3>
+    }
   } @else {
     <div class="loading-container">
       <img src="../../../assets/imgs/pokeball.png" alt="loading" class="pokeball-spinner" />
