--- a/frontend/src/app/pages/home/home.scss
+++ b/frontend/src/app/pages/home/home.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 .home-container {
   margin-top: 40px;
 }
@@ -41,4 +43,18 @@
     opacity: 1;
     transform: translateX(-50%) translateY(0);
   }
+}
+
+.no-results-found-img {
+  display: block;
+  margin: 10px auto;
+  width: 500px;
+  height: 500px;
+}
+
+.no-results-found-text {
+  color: #EE151D;
+  font-family: 'Bangers', cursive;
+  font-size: 50px;
+  text-align: center;
 }
