--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -16,7 +16,7 @@
       <div class="loading-container">
         <img src="../../../assets/imgs/pokeball.png" alt="loading" class="pokeball-spinner" />
       </div>
-    } @else if (isNameSearch) {
+    } @else if (isNameSearch || isTypeSearch) {
       <img src="../../../assets/imgs/team_rocket.png" alt="team-rocket" class="no-results-found-img" />
       <h3 class="no-results-found-text">Oops! No Pokemon found</h3>
     }
